<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/bmpTextView"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:autofillHints="bpm value"
        android:gravity="center"
        android:hint="@string/bpm_hint"
        android:inputType="number"
        android:text="@string/bpm"
        android:textAlignment="center"
        android:visibility="visible"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/bmpBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:max="200"
        android:min="30"
        android:progress="60"
        app:layout_constraintBottom_toTopOf="@id/Add10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Add10"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="12dp"
        android:ellipsize="none"
        android:padding="2dp"
        android:text="@string/Add10"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/bmpTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Add5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="12dp"
        android:ellipsize="none"
        android:padding="2dp"
        android:text="@string/Add5"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/bmpTextView"
        app:layout_constraintEnd_toStartOf="@+id/Add10" />

    <Button
        android:id="@+id/Add1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="12dp"
        android:ellipsize="none"
        android:padding="2dp"
        android:text="@string/Add1"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/bmpTextView"
        app:layout_constraintEnd_toStartOf="@id/Add5" />

    <Button
        android:id="@+id/Sub10"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="12dp"
        android:ellipsize="none"
        android:padding="2dp"
        android:text="@string/Sub10"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/bmpTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Sub5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="12dp"
        android:ellipsize="none"
        android:padding="2dp"
        android:text="@string/Sub5"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/bmpTextView"
        app:layout_constraintStart_toEndOf="@+id/Sub10" />

    <Button
        android:id="@+id/Sub1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="12dp"
        android:ellipsize="none"
        android:padding="2dp"
        android:text="@string/Sub1"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/bmpTextView"
        app:layout_constraintStart_toEndOf="@id/Sub5" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="100dp"
        android:textAlignment="viewEnd"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/Switch"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:text="@string/sw"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>